--- a/pom.xml
+++ b/pom.xml
@@ -25,7 +25,13 @@
     <version>3.1.0</version>
     <scope>provided</scope>
 </dependency>
-    
+    <!-- https://mvnrepository.com/artifact/org.eclipse.persistence/org.eclipse.persistence.jpa.jpql -->
+<dependency>
+    <groupId>org.eclipse.persistence</groupId>
+    <artifactId>org.eclipse.persistence.jpa.jpql</artifactId>
+    <version>3.1.0-M1</version>
+</dependency>
+
   </dependencies>
   <build>
     <finalName>RegistrationForm</finalName>
