--- a/pom.xml
+++ b/pom.xml
@@ -30,7 +30,13 @@
     <groupId>org.eclipse.persistence</groupId>
     <artifactId>org.eclipse.persistence.jpa.jpql</artifactId>
     <version>3.1.0-M1</version>
+</dependency><!-- https://mvnrepository.com/artifact/org.eclipse.persistence/org.eclipse.persistence.jpa.jpql -->
+<dependency>
+    <groupId>org.eclipse.persistence</groupId>
+    <artifactId>org.eclipse.persistence.jpa.jpql</artifactId>
+    <version>3.1.0-M1</version>
 </dependency>
+
 
   </dependencies>
   <build>
